--- a/lib/QMBForm/src/main/res/layout/finish_field_cell.xml
+++ b/lib/QMBForm/src/main/res/layout/finish_field_cell.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:padding="@dimen/qmb_padding"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:padding="@dimen/qmb_padding"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground">
 
     <TextView
         android:layout_width="wrap_content"
@@ -12,15 +14,21 @@
         android:layout_gravity="end"
         android:text="Title"
         android:layout_weight="1"
-        android:textColor="?colorPrimary"
-        android:id="@+id/textView"/>
+        android:textColor="@android:color/holo_blue_light"
+        android:id="@+id/textView"
+        android:focusable="false"
+        android:clickable="false"
+        />
 
-    <!--<ImageView-->
-        <!--android:src="@drawable/ic_push_icon"-->
-        <!--android:layout_gravity="end"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--/>-->
+    <ImageView
+        android:id="@+id/imageView"
+        android:src="@drawable/ic_radio"
+        android:layout_gravity="end"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:focusable="false"
+        android:clickable="false"
+        />
 
 
 </LinearLayout>
