qmb compatibility & updates for android P

--- a/lib/QMBForm/src/main/res/layout-v23/push_field_cell.xml
+++ b/lib/QMBForm/src/main/res/layout-v23/push_field_cell.xml
@@ -6,7 +6,8 @@
     android:padding="@dimen/qmb_padding"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground">
+    android:background="?android:attr/selectableItemBackground"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,15 +15,22 @@
         android:layout_gravity="end"
         android:text="Title"
         android:layout_weight="1"
-        android:textColor="@android:color/holo_blue_light"
-        android:id="@+id/textView"
         android:focusable="false"
         android:clickable="false"
+        android:id="@+id/textView"/>
+
+    <TextView
+        android:id="@+id/value"
+        android:layout_gravity="end"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:focusable="false"
+        android:clickable="false"
+        android:text=""
         />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:src="@drawable/ic_radio"
+        android:src="@drawable/ic_push_icon"
         android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
