finished draw cell bug fixes

--- a/lib/QMBForm/src/main/res/layout-v21/image_field_cell.xml
+++ b/lib/QMBForm/src/main/res/layout-v21/image_field_cell.xml
@@ -11,6 +11,8 @@
     android:id="@+id/cell"
     android:clickable="true"
     android:focusable="true"
+    android:descendantFocusability="blocksDescendants"
+
     >
 
 
