--- a/lib/QMBForm/src/main/res/layout/image_field_cell.xml
+++ b/lib/QMBForm/src/main/res/layout/image_field_cell.xml
@@ -12,6 +12,8 @@
     android:clickable="true"
     android:focusable="true"
     android:focusableInTouchMode="true"
+    android:descendantFocusability="blocksDescendants"
+
     >
 
 
