--- a/lib/QMBForm/src/main/res/layout/push_field_cell.xml
+++ b/lib/QMBForm/src/main/res/layout/push_field_cell.xml
@@ -7,6 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
+    android:descendantFocusability="blocksDescendants"
+
     >
 
 
