--- a/lib/QMBForm/src/main/res/layout-v23/push_field_cell.xml
+++ b/lib/QMBForm/src/main/res/layout-v23/push_field_cell.xml
@@ -73,6 +73,7 @@
 
     <!-- srcCompat doesn't work in newer APIs... -->
     <ImageView
+        android:id="@+id/icon_right"
         android:src="@drawable/ic_push_icon"
         android:layout_gravity="end"
         android:layout_width="wrap_content"
