--- a/lib/QMBForm/src/main/res/values/colors.xml
+++ b/lib/QMBForm/src/main/res/values/colors.xml
@@ -16,5 +16,8 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorAccentLight">#FfC0C0</color>
 
+    <color name="colorFormError">#FfC0C0</color>
+
+
     <color name="colorPrimaryBright">#328335</color>
 </resources>
