--- a/lib/QMBForm/src/main/res/layout/push_field_cell.xml
+++ b/lib/QMBForm/src/main/res/layout/push_field_cell.xml
@@ -31,7 +31,7 @@
         />
 
     <ImageView
-        android:src="@drawable/ic_push_icon"
+        app:srcCompat="@drawable/ic_push_icon"
         android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
