git fix after merge

--- a/lib/QMBForm/src/main/res/layout/image_field_cell.xml
+++ b/lib/QMBForm/src/main/res/layout/image_field_cell.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal"
-              android:padding="@dimen/qmb_padding">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="@dimen/qmb_padding"
+    android:background="?android:attr/selectableItemBackground"
+    android:id="@+id/cell"
+    android:clickable="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:descendantFocusability="blocksDescendants"
+
+    >
 
 
     <TextView
@@ -13,13 +23,26 @@
         android:layout_height="match_parent"
         android:layout_weight="3"
         android:gravity="center_vertical|left"
-        android:paddingRight="10dp" />
+        android:paddingRight="10dp"
+        tools:ignore="RtlHardcoded"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="false"
+        />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:scaleType="centerCrop"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:scaleType="fitCenter"
+        android:tint="#ccc"
+        app:srcCompat="@drawable/ic_add_a_photo"
+        android:background="?android:attr/selectableItemBackground"
+        tools:ignore="VectorDrawableCompat"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="false"
+        />
 
 </LinearLayout>
