--- a/lib/QMBForm/src/main/res/layout/push_field_cell.xml
+++ b/lib/QMBForm/src/main/res/layout/push_field_cell.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
@@ -7,35 +6,81 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
+    android:descendantFocusability="blocksDescendants"
 
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:text="Title"
-        android:layout_weight="1"
-        android:focusable="false"
-        android:clickable="false"
-        android:id="@+id/textView"/>
-
-    <TextView
-        android:id="@+id/value"
-        android:layout_gravity="end"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:focusable="false"
-        android:clickable="false"
-        android:text=""
-        />
 
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/icon"
+        android:layout_gravity="center_vertical"
+        />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="Title"
+                android:layout_weight="1"
+
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:clickable="false"
+                android:id="@+id/textView"/>
+
+            <TextView
+                android:id="@+id/value"
+                android:layout_gravity="end"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:clickable="false"
+                android:text=""
+                />
+
+
+
+
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/subtitle"
+            android:text=""
+            android:textColor="@android:color/secondary_text_light"
+            />
+
+    </LinearLayout>
+
+    <!-- srcCompat doesn't work in newer APIs... -->
+    <ImageView
+
+        android:id="@+id/icon_right"
         app:srcCompat="@drawable/ic_push_icon"
         android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+
         android:focusable="false"
+        android:focusableInTouchMode="false"
         android:clickable="false"
         />
 
