--- a/lib/QMBForm/src/main/res/layout/finish_field_cell.xml
+++ b/lib/QMBForm/src/main/res/layout/finish_field_cell.xml
@@ -6,7 +6,9 @@
     android:padding="@dimen/qmb_padding"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground">
+    android:background="?android:attr/selectableItemBackground"
+    android:descendantFocusability="blocksDescendants"
+    >
 
     <TextView
         android:layout_width="wrap_content"
@@ -18,6 +20,7 @@
         android:id="@+id/textView"
         android:focusable="false"
         android:clickable="false"
+        android:focusableInTouchMode="false"
         />
 
     <ImageView
@@ -28,6 +31,8 @@
         android:layout_height="match_parent"
         android:focusable="false"
         android:clickable="false"
+        android:focusableInTouchMode="false"
+
         />
 
 
