--- a/app/src/main/res/layout/activity_page_view.xml
+++ b/app/src/main/res/layout/activity_page_view.xml
@@ -5,18 +5,18 @@
 			  android:layout_width="match_parent"
 			  android:layout_height="match_parent">
 
-	<android.support.v4.view.ViewPager
+	<ViewPager
 		android:id="@+id/viewpager"
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent">
 
-		<android.support.v4.view.PagerTitleStrip
+		<PagerTitleStrip
 				android:layout_width="wrap_content"
                 android:padding="@dimen/qmb_padding"
 				android:layout_height="wrap_content"
                 android:background="@drawable/textlines"
 				android:layout_gravity="top" />
 
-	</android.support.v4.view.ViewPager>
+	</ViewPager>
 
 </RelativeLayout>
